Fix swipe-to-turn-page not working in EPUB Reader on iOS devices

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -8,6 +8,10 @@
 	box-sizing: border-box;
 }
 
+html, body {
+	overscroll-behavior: none;
+}
+
 html,
 body,
 #zotero-web-library,
